# cotton-daisy

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  release.yml
docs/: index.md
docs/components/: alert.md  avatar.md  badge.md  button.md  card.md  divider.md  dropdown.md  kbd.md  loading.md  menu.md  modal.md  skeleton.md
example/example/: settings.py  urls.py  views.py
example/templates/: base.html  example.html
example/templates/cotton/ui/: dropdown_content.html
